fix: team-report search icon is not aligned

--- a/src/app/fyle/team-reports/team-reports.page.scss
+++ b/src/app/fyle/team-reports/team-reports.page.scss
@@ -69,7 +69,7 @@
 
   &--simple-search-block {
     display: flex;
-    vertical-align: baseline;
+    align-items: center;
   }
 
   &--primary-cta {
